Fix up styling and spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,11 +15,16 @@ h1 {
 }
 
 h2 {
-    font-size: max(3vw, 20px);
+    font-size: max(3vw, 36px);
 }
 
 p {
-    font-size: max(1.5vw, 16px);
+    font-size: max(1.5vw, 20px);
+}
+
+.section-title {
+    font-weight: 400;
+    padding-bottom: 20px;
 }
 
 nav {
@@ -29,7 +34,6 @@ nav {
     width: 100%;
     line-height: 1;
     box-shadow: 0 2px 4px #1a1a1a;
-    font-size: 22px;
     font-weight: 200;
     color: white;
 }
@@ -108,7 +112,6 @@ nav {
     flex-direction: column;
     background-color: inherit;
     color: inherit;
-    padding: 8px;
 }
 
 .project-expand-button {
@@ -117,18 +120,19 @@ nav {
     background-color: inherit;
     color: inherit;
     text-align: left;
+    padding: 10px 0;
 }
 
 .project-expand-button-text *,
 .project-expandable * {
-    padding-bottom: 8px;
+    padding-bottom: 6px;
 }
 
 .project-expandable {
     display: flex;
     flex-direction: column;
-    padding-left: 10px;
-    padding-top: 18px;
+    padding-left: 16px;
+    margin-bottom: 10px;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.3s ease-in-out;
@@ -139,7 +143,7 @@ nav {
     flex-direction: column;
     align-items: left;
     list-style-type: disc;
-    padding-left: 18px;
+    padding-left: 26px;
 }
 
 .project-technologies,
